# robotframework-platynui

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  clippy.toml  dummy.xml  justfile  pyproject.toml  robot.toml  rustfmt.toml
apps/eis-test-client/: Cargo.toml
apps/eis-test-client/src/: app.rs  main.rs  portal.rs
apps/inspector/: Cargo.toml  build.rs
apps/inspector/src/: lib.rs  main.rs
apps/inspector/ui/: app-window.slint
apps/test-app-egui/: Cargo.toml
apps/test-app-egui/src/: main.rs
apps/wayland-compositor/: Cargo.toml  README.md
apps/wayland-compositor-ctl/: Cargo.toml  README.md
apps/wayland-compositor-ctl/src/: app.rs  main.rs
apps/wayland-compositor/docs/: configuration.md  ipc-protocol.md  usage.md
apps/wayland-compositor/examples/: multi-monitor.toml
apps/wayland-compositor/src/: child.rs  client.rs  config.rs  control.rs  cursor.rs  decorations.rs  eis.rs  environment.rs  focus.rs  grabs.rs  input.rs  lib.rs  main.rs  multi_output.rs  ready.rs  render.rs  security.rs  signals.rs  state.rs  ui.rs  workspace.rs  xwayland.rs
apps/wayland-compositor/tests/: ipc_tests.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs  test_support.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/tests/: test_id_attribute.rs
crates/link/: Cargo.toml
crates/link/src/: lib.rs
crates/platform-linux/: Cargo.toml
crates/platform-linux-wayland/: Cargo.toml
crates/platform-linux-wayland/src/: capabilities.rs  connection.rs  coordinates.rs  desktop.rs  eis.rs  highlight.rs  keyboard.rs  lib.rs  pointer.rs  screenshot.rs  session_detect.rs  wayland_util.rs  window_manager.rs
crates/platform-linux-x11/: Cargo.toml
crates/platform-linux-x11/src/: desktop.rs  highlight.rs  keyboard.rs  lib.rs  pointer.rs  screenshot.rs  window_manager.rs  x11util.rs
crates/platform-linux/src/: lib.rs  session.rs
crates/platform-mock/: Cargo.toml
crates/platform-mock/src/: desktop.rs  highlight.rs  keyboard.rs  lib.rs  pointer.rs  screenshot.rs  window_manager.rs
crates/platform-windows/: Cargo.toml
crates/platform-windows/src/: desktop.rs  highlight.rs  init.rs  keyboard.rs  lib.rs  pointer.rs  screenshot.rs  window_manager.rs
crates/platynui-core/: Cargo.toml
crates/platynui-core/src/: lib.rs
crates/platynui-xpath/: Cargo.toml  OPTIMIERUNGSLOG.md  OPTIMIERUNGSPLAN.md  README.md
crates/platynui-xpath/benches/: advanced_benchmarks.rs  parser_smallvec.rs  performance_analysis.rs  string_interning_benchmarks.rs  xpath_benches.rs
crates/platynui-xpath/docs/: performance_review.md  xpath20_coverage.md
crates/platynui-xpath/examples/: debug_union.rs  repl.rs  simple.rs  simple_parser.rs
crates/platynui-xpath/src/: collation.rs  compiler.rs  eq.rs  evaluator.rs  functions.rs  lib.rs  model.rs  parser.rs  runtime.rs  simple_node.rs  temporal.rs  xdm.rs  xpath2.pest
crates/platynui-xpath/tests/: adapter_ordering.rs  axes_wildcard_vs_node.rs  cast_daytime_duration_negative.rs  castable_matrix.rs  casts_basic.rs  casts_cardinality.rs  casts_fractional_seconds.rs  casts_matrix_full.rs  casts_temporal_extended.rs  comparisons_mixed_regression.rs  comparisons_untyped_numeric_regression.rs  compiler_arith_logic.rs  compiler_comparisons_types.rs  compiler_control_flow.rs  compiler_for_multi.rs  compiler_literals.rs  compiler_negative_lowering.rs  compiler_paths_predicates.rs  compiler_quantifiers_for.rs  compiler_set_ops.rs  compiler_vars_funcs.rs  document_node_inner.rs  duration_fractional_truncation.rs  equality_date_time_eqkey.rs  error_codes.rs  evaluator_aggregate_funcs.rs  evaluator_arith.rs  evaluator_arith_logic.rs  evaluator_arith_promotion.rs  evaluator_atomization.rs  evaluator_axes.rs  evaluator_axes_siblings.rs  evaluator_axis_namespace.rs  evaluator_boolean.rs  evaluator_collation_comparisons.rs  evaluator_comparison_extended.rs  evaluator_comparison_matrix.rs  evaluator_comparisons.rs  evaluator_comparisons_collation.rs  evaluator_comparisons_numeric_matrix.rs  (+144 more)
crates/playground/: Cargo.toml
crates/playground/examples/: wayland_test.rs
crates/playground/src/: main.rs
crates/provider-atspi/: Cargo.toml
crates/provider-atspi/src/: clearable_cell.rs  connection.rs  error.rs  ewmh.rs  lib.rs  node.rs  process.rs  timeout.rs
crates/provider-jsonrpc/: Cargo.toml
crates/provider-jsonrpc/src/: lib.rs
crates/provider-mock/: Cargo.toml
crates/provider-mock/assets/: mock_tree.xml
crates/provider-mock/src/: events.rs  factory.rs  focus.rs  input.rs  lib.rs  node.rs  provider.rs  tests.rs  tree.rs  window.rs
crates/provider-windows-uia/: Cargo.toml
crates/provider-windows-uia/src/: com.rs  error.rs  lib.rs  map.rs  node.rs  provider.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: keyboard.rs  keyboard_sequence.pest  keyboard_sequence.rs  lib.rs  pointer.rs  runtime.rs  test_support.rs  xpath.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/xkb-util/: Cargo.toml  build.rs
crates/xkb-util/src/: lib.rs  reverse_lookup.rs
crates/xpath/: Cargo.toml  README.md
crates/xpath/benches/: advanced_benchmarks.rs  benchmark_constant_folding.rs  evaluate_first_benchmarks.rs  parser_smallvec.rs  performance_analysis.rs  short_circuit_benchmarks.rs  streaming_vs_materialized.rs  string_interning_benchmarks.rs  xpath_benches.rs
crates/xpath/docs/: xpath20_coverage.md
crates/xpath/examples/: dump_parse.rs  print_ir.rs  repl.rs  simple.rs
crates/xpath/src/: lib.rs
crates/xpath/tests/: attribute_by_name.rs  axes_wildcard_vs_node.rs  cast_daytime_duration_negative.rs  castable_matrix.rs  casts_basic.rs  casts_matrix_full.rs  casts_temporal_extended.rs  comparisons_mixed_regression.rs  comparisons_untyped_numeric_regression.rs  compiler_arith_logic.rs  compiler_comparisons_types.rs  compiler_control_flow.rs  compiler_let_expr.rs  compiler_literals.rs  compiler_paths_predicates.rs  compiler_set_ops.rs  compiler_vars_funcs.rs  document_node_inner.rs  evaluate_first.rs  evaluator_aggregate_funcs.rs  evaluator_arith_integer_subtypes.rs  evaluator_axes.rs  (+120 more)
(+285 files in other folders)
