[workspace]
members = ["crates/*", "apps/*", "packages/*"]
#exclude = ["packages/native", "packages/inspector", "packages/cli"]
default-members = ["crates/playground"]
resolver = "3"

[workspace.package]
version = "0.12.0-dev.4"
description = "Cross-platform UI automation toolkit for Robot Framework with XPath-based element selection"
readme = "README.md"
keywords = [
    "robotframework",
    "gui",
    "automation",
    "testing",
    "desktop",
    "platynui",
]
categories = ["development-tools", "testing"]
edition = "2024"
homepage = "https://github.com/imbus/robotframework-PlatynUI"
documentation = "https://github.com/imbus/robotframework-PlatynUI"
repository = "https://github.com/imbus/robotframework-PlatynUI"
authors = ["Daniel Biehl <daniel.biehl@imbus.de>"]
license = "Apache-2.0"
rust-version = "1.90"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
unused_crate_dependencies = "warn"
missing_docs = "allow"

[workspace.lints.clippy]
pedantic = "warn"
cargo = "warn"
nursery = "allow"
complexity = "warn"
