[package]
name = "platynui-inspector"
version.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
mock-provider = [
    "platynui-runtime/mock-provider",
    "dep:platynui-provider-mock",
    "dep:platynui-platform-mock",
]

[dependencies]
eframe = "0.33"
egui_extras = "0.33"
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }

# Mock providers (optional)
platynui-provider-mock = { path = "../../crates/provider-mock", optional = true }
platynui-platform-mock = { path = "../../crates/platform-mock", optional = true }

# Internal crates
platynui-core = { path = "../../crates/core" }
platynui-runtime = { path = "../../crates/runtime", default-features = false }
platynui-link = { path = "../../crates/link" }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
platynui-platform-windows = { path = "../../crates/platform-windows" }
platynui-provider-windows-uia = { path = "../../crates/provider-windows-uia" }

[target.'cfg(target_os = "linux")'.dependencies]
platynui-platform-linux-x11 = { path = "../../crates/platform-linux-x11" }
platynui-provider-atspi = { path = "../../crates/provider-atspi" }

[target.'cfg(target_os = "macos")'.dependencies]
platynui-platform-macos = { path = "../../crates/platform-macos" }
platynui-provider-macos-ax = { path = "../../crates/provider-macos-ax" }

[lib]
name = "platynui_inspector"
path = "src/lib.rs"

[[bin]]
name = "platynui-inspector-rs"
path = "src/main.rs"
