[package]
name = "platynui-wayland-compositor"
version.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
description = "Wayland compositor for UI test automation with PlatynUI on Linux (Wayland and X11 applications)"

[target.'cfg(target_os = "linux")'.dependencies]
# Wayland compositor framework
smithay = { version = "0.7", default-features = false, features = [
    "wayland_frontend",
    "desktop",
    "renderer_glow",
    "backend_winit",
    "backend_drm",
    "backend_gbm",
    "backend_libinput",
    "backend_session_libseat",
    "backend_udev",
    "xwayland",
] }

# Event loop
calloop = "0.14"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "env-filter",
] }

# Compositor UI (titlebar text, buttons, future panel)
egui = { version = "0.33", default-features = false, features = ["default_fonts"] }

# egui → glow renderer (GPU-accelerated titlebar rendering)
egui_glow = { version = "0.33", default-features = false }

# Screenshot encoding
png = "0.18"

# Cursor theme loading (xcursor images for screencopy / software cursor)
xcursor = "0.3"

# Configuration file
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"

# Signal handling
signal-hook = "0.4"

[lints]
workspace = true

[lib]
name = "platynui_wayland_compositor"
path = "src/lib.rs"

[[bin]]
name = "platynui-wayland-compositor"
path = "src/main.rs"
