[package]
name = "platynui-core"
version.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
once_cell = "1.21.3"
inventory = "0.3.21"
bitflags = "2.9.4"

[dev-dependencies]
rstest = "0.26.1"
