[package]
name = "platynui-core"
description = "Core types and traits for PlatynUI"
version.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.21"
inventory = "0.3"
bitflags = "2.10"
thiserror = "2.0"

[dev-dependencies]
rstest = "0.26"
