[package]
name = "platynui-platform-linux-wayland"
description = "Linux Wayland platform backend for PlatynUI"
version.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
platynui-core = { path = "../core" }
platynui-xkb-util = { path = "../xkb-util" }
inventory = "0.3"
tracing = { version = "0.1", default-features = false, features = ["std"] }

# Wayland client
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wayland-backend = "0.3"

# EI (libei) for input injection on Mutter/KWin
reis = "0.6"
enumflags2 = "0.7"
rustix = { version = "1", features = ["event", "net"] }

# Evdev key codes from linux/input-event-codes.h
input-event-codes = "6"

# XKB keymap handling for keyboard input
xkbcommon = { version = "0.8", features = ["wayland"] }

# D-Bus for portal access and compositor IPC (KWin)
zbus = { version = "5", features = ["blocking-api"] }

# CPU rendering for highlight overlays
tiny-skia = "0.11"
