[package]
description = "Linux Wayland platform backend for PlatynUI"
name = "platynui-platform-linux-wayland"
version.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
platynui-core = { path = "../core" }
platynui-xkb-util = { path = "../xkb-util" }
tracing = { version = "0.1", default-features = false, features = ["std"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging", "unstable"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wayland-protocols-misc = { version = "0.3", features = ["client"] }
reis = "0.6"
enumflags2 = "0.7"
rustix = { version = "1", features = ["event", "fs", "net"] }
serde_json = "1"
zbus = { version = "5", features = ["blocking-api"] }

[dev-dependencies]
rstest = "0.25"

[lints]
workspace = true
