[package]
description = "Linux X11 platform backend for PlatynUI"
name = "platynui-platform-linux-x11"
version.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
platynui-core = { path = "../core" }
inventory = "0.3"
once_cell = "1"
tracing = { version = "0.1", default-features = false, features = ["std"] }
x11rb = { version = "0.13", features = ["xtest", "xfixes", "randr", "shape"] }
