[package]
description = "Linux platform mediator for PlatynUI — delegates to X11 or Wayland sub-platform at runtime"
name = "platynui-platform-linux"
version.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
platynui-core = { path = "../core" }
platynui-platform-linux-x11 = { path = "../platform-linux-x11" }
inventory = "0.3"
tracing = { version = "0.1", default-features = false, features = ["std"] }

[dev-dependencies]
rstest = "0.25"

[lints]
workspace = true
