[package]
name = "platynui-platform-mock"
version.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
platynui-core = { path = "../core" }
inventory = "0.3.21"
once_cell = "1.19.0"

[dev-dependencies]
rstest = "0.26.1"
