[package]
name = "platynui-platform-mock"
description = "Mock platform backend for PlatynUI testing and development"
version.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
platynui-core = { path = "../core" }
inventory = "0.3"
once_cell = "1.21"

[dev-dependencies]
rstest = "0.26"
serial_test = "3.3"
