[package]
name = "playground"
version.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []


[dependencies]
platynui-core = { path = "../core" }
platynui-runtime = { path = "../runtime" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

platynui-link = { path = "../link" }

[target.'cfg(target_os = "windows")'.dependencies]
platynui-platform-windows = { path = "../platform-windows" }
platynui-provider-windows-uia = { path = "../provider-windows-uia" }

[target.'cfg(target_os = "linux")'.dependencies]
platynui-platform-linux-x11 = { path = "../platform-linux-x11" }
platynui-provider-atspi = { path = "../provider-atspi" }
# Wayland
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
wayland-protocols-misc = { version = "0.3", features = ["client"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

[target.'cfg(target_os = "macos")'.dependencies]
platynui-platform-macos = { path = "../platform-macos" }
platynui-provider-macos-ax = { path = "../provider-macos-ax" }
