[package]
name = "platynui-provider-atspi"
version.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
platynui-core = { path = "../core" }
once_cell = "1.21.3"
