[package]
name = "platynui-provider-jsonrpc"
description = "JSON-RPC remote provider for PlatynUI cross-platform automation"
version.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
