[package]
name = "platynui-provider-mock"
version.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
platynui-core = { path = "../core" }
inventory = "0.3.21"
quick-xml = { version = "0.32", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
rstest = "0.26.1"
serial_test = "3.2.0"
