[package]
name = "platynui-provider-windows-uia"
version.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
platynui-core = { path = "../core" }
inventory = "0.3.21"
once_cell = "1.21.3"
thiserror = "2.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.1", features = [
  "Win32_System_Com",
  "Win32_System_Ole",
  "Win32_System_Variant",
  "Win32_Foundation",
  "Win32_UI_Accessibility",
] }
