[package]
name = "platynui-runtime"
version.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
platynui-core = { path = "../core" }
platynui-xpath = { path = "../xpath" }
serde_json = "1.0"
thiserror = "2.0"
