[package]
name = "platynui-runtime"
version.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
mock-provider = [
    "platynui-provider-mock",
    "platynui-platform-mock",
]

[dependencies]
platynui-core = { path = "../core" }
platynui-xpath = { path = "../xpath" }
serde_json = "1.0"
thiserror = "2.0"
platynui-provider-mock = { path = "../provider-mock", optional = true }
platynui-platform-mock = { path = "../platform-mock", optional = true }

[dev-dependencies]
inventory = "0.3.21"
rstest = "0.26.1"
platynui-platform-mock = { path = "../platform-mock" }
platynui-provider-mock = { path = "../provider-mock" }
