[package]
name = "platynui-runtime"
version.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
mock-provider = [
    "platynui-provider-mock",
    "platynui-platform-mock",
]

[dependencies]
platynui-core = { path = "../core" }
platynui-xpath = { path = "../xpath" }
serde_json = "1.0.145"
thiserror = "2.0"
platynui-provider-mock = { path = "../provider-mock", optional = true }
platynui-platform-mock = { path = "../platform-mock", optional = true }
pest = { version = "2.8.2", default-features = false, features = ["std"] }
pest_derive = "2.8.2"

[target.'cfg(target_os = "windows")'.dependencies]
platynui-platform-windows = { path = "../platform-windows" }
platynui-provider-windows-uia = { path = "../provider-windows-uia" }

[target.'cfg(target_os = "linux")'.dependencies]
platynui-platform-linux-x11 = { path = "../platform-linux-x11" }
platynui-provider-atspi = { path = "../provider-atspi" }

[target.'cfg(target_os = "macos")'.dependencies]
platynui-platform-macos = { path = "../platform-macos" }
platynui-provider-macos-ax = { path = "../provider-macos-ax" }

[dev-dependencies]
inventory = "0.3.21"
rstest = "0.26.1"
platynui-platform-mock = { path = "../platform-mock" }
platynui-provider-mock = { path = "../provider-mock" }
serial_test = "3.2.0"
